<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Widget">





    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#410FA3"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fredoka_condensed_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="22dp" />

        <Button
            android:id="@+id/back_button_login"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:background="@drawable/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />


    </com.google.android.material.appbar.MaterialToolbar>


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="117dp"
            android:layout_height="99dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="96dp"
            android:src="@drawable/login_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="295dp"
            android:layout_height="97dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="208dp"
            android:fontFamily="@font/fredoka_semicondensed_medium"
            android:gravity="center"
            android:text="@string/loginGreet"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/fredoka_semiexpanded_medium"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="66dp"
            android:layout_height="17dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fredoka_semiexpanded_medium"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="196dp"
        android:text="Forgot Password"
        android:textColor="#D6185D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/fredoka_condensed_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button_next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/fredoka_bold"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.447" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="-41dp"
            tools:ignore="MissingConstraints">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_condensed_regular"
            android:hint="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_semiexpanded_medium"
            android:gravity="center"
            android:text="@string/googleIn"
            android:textColor="@color/buttons"
            app:layout_constraintBottom_toTopOf="@+id/textView_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next1"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/textView_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/fredoka_semiexpanded_medium"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next1" />

</androidx.constraintlayout.widget.ConstraintLayout>